[PURPLE-121] 간단한 리뷰 CUD 및 온보딩 향수 평가 로직 변경