@@ -3,47 +3,60 @@ package com.pikachu.purple.application.rating.service.application;
 import static com.pikachu.purple.support.security.SecurityProvider.getCurrentUserAuthentication;
 
 import com.pikachu.purple.application.favorite.port.in.FavoriteCreateUseCase;
-import com.pikachu.purple.application.rating.port.in.RatingSaveUseCase;
+import com.pikachu.purple.application.rating.port.in.RatingCreateUseCase;
 import com.pikachu.purple.application.rating.service.domain.RatingDomainService;
-import com.pikachu.purple.application.userPreferenceNote.port.in.UserPreferenceNoteSaveUseCase;
+import com.pikachu.purple.application.userPreferenceNote.port.in.UserPreferenceNoteCreateUseCase;
 import com.pikachu.purple.application.util.IdGenerator;
-import com.pikachu.purple.bootstrap.user.vo.RatingValue;
-import jakarta.transaction.Transactional;
+import com.pikachu.purple.bootstrap.review.vo.RatingValue;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
-public class RatingSaveApplicationService implements RatingSaveUseCase {
+public class RatingCreateApplicationService implements RatingCreateUseCase {
 
     private final RatingDomainService ratingDomainService;
-    private final UserPreferenceNoteSaveUseCase userPreferenceNoteSaveUseCase;
+    private final UserPreferenceNoteCreateUseCase userPreferenceNoteCreateUseCase;
     private final FavoriteCreateUseCase favoriteCreateUseCase;
 
     @Transactional
     @Override
-    public void invoke(Command command) {
+    public void createOnboarding(OnboardingCommand command) {
         List<Long> ratingIds = IntStream.range(0, command.ratingValues().size())
             .mapToObj(i -> IdGenerator.generate())
-            .collect(Collectors.toList());
+            .toList();
 
         Long userId = getCurrentUserAuthentication().userId();
 
-        ratingDomainService.create(
+        ratingDomainService.createOnboarding(
             ratingIds,
             userId,
+            command.reviewIds(),
             command.ratingValues()
         );
 
-        userPreferenceNoteSaveUseCase.invoke();
+        userPreferenceNoteCreateUseCase.invoke();
 
         List<Long> perfumeIds = command.ratingValues().stream()
             .map(RatingValue::perfumeId)
             .toList();
         favoriteCreateUseCase.invoke(perfumeIds);
+    }
+
+    @Transactional
+    @Override
+    public void create(Command command) {
+        Long userId = getCurrentUserAuthentication().userId();
+
+        ratingDomainService.create(
+            IdGenerator.generate(),
+            userId,
+            command.reviewId(),
+            command.score()
+        );
     }
 
 }
